# gmrtbeam

./: .gitignore  LICENSE  justfile  pyproject.toml  setup.cfg
docs/source/: beams.ipynb  conf.py  contents.md  fitting.ipynb  mosaic.ipynb  mwe.ipynb  overview.ipynb
src/gmrtbeam/: beam.py  core.py  fit.py  mosaic.py  tiling.py
