[build-system]
requires = ["wheel", "setuptools>=45", "setuptools_scm[toml]>=6.0"]

[project]
name = "gmrtbeam"
license = "MIT"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
license-files = ["LICENSE"]
description = "Create and tile GMRT beams."
authors = [{name = "The SPOTLIGHT Team", email = "spotlight@ncra.tifr.res.in"}]

classifiers = [
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
  "numpy",
  "pytz",
  "rich",
  "lmfit",
  "joblib",
  "astropy",
  "ultraplot",
  "matplotlib",
  "scikit-image",
  "opencv-python",
]

[project.urls]
Source = "https://github.com/astrogewgaw/gmrtbeam"
Homepage = "https://github.com/astrogewgaw/gmrtbeam"
Documentation = "https://github.com/astrogewgaw/gmrtbeam"
Issues = "https://github.com/astrogewgaw/gmrtbeam/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true
packages = {find = {where = ["src"]}}

[tool.setuptools_scm]
write_to = "src/gmrtbeam/_version.py"

[tool.interrogate]
verbose = 0
color = true
quiet = false
fail-under = 85
badge-format = "svg"
whitelist-regex = []
ignore-magic = true
ignore-module = false
ignore-private = false
ignore-setters = false
ignore-init-method = true
omit-covered-files = false
ignore-init-module = false
ignore-semiprivate = false
ignore-nested-classes = true
badge-style = "for-the-badge"
ignore-nested-functions = true
ignore-property-decorators = false
generate-badge = "assets/interrogate.svg"
exclude = [
  "docs",
  "tests",
  "build",
  "assets",
  "src/gmrtbeam/_version.py",
]
