[metadata]
name =  gmrtbeam
license = MIT License
license_file = LICENSE
author = "The SPOTLIGHT Team"
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md, CONTRIBUTING.md

project_urls = 
    Home Page = https://github.com/nsmspotlight/gmrtbeam
    Source Code = https://github.com/nsmspotlight/gmrtbeam
    Documentation = https://github.com/nsmspotlight/gmrtbeam
    Bug Reports = https://github.com/nsmspotlight/gmrtbeam/issues

classifiers =
    Operating System :: Unix
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
package_dir = =src
use_scm_version = True
python_requires = >=3.8
include_package_data = True
setup_requires = setuptools_scm[toml]>=6.0

[options.packages.find]
where=src
